tests/negative/symbols/misspelled.orng
// misspelled.orng:9:8: error: use of undeclared identifier `car`
//     car
//       ^
// 
fn main() -> Int {
    let var = 4
    let bar = 5
    let gar = 5
    car
}